test-cases/final-dump/resource_error.exp
Error detected during resource checking of module(s) resource_error
final-dump/resource_error.wybe:2:5: Call to resourceful proc without ! resource marker: wybe.string.<0>println("shouldn't work: no ! before println call":wybe.string @resource_error:nn:nn)
